# akinator

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  EXTENDING.md  HOW_IT_WORKS.md  Justfile  README.md  TODO.md  docker-compose.yml  main.py  pyproject.toml  ruff.toml  skills-lock.json
.claude/: SETTINGS.md  settings.json
.claude/hooks/: post-edit-format.py
.claude/skills/just-workflow/: SKILL.md
.claude/skills/loguru/: SKILL.md
.claude/skills/packaging/: SKILL.md
.claude/skills/project-setup/: JUSTFILE.md
.claude/skills/project-setup/scripts/: create_project.py
.claude/skills/release-management/scripts/: bump_version.py
.claude/skills/security-audit/scripts/: security_scan.py
.claude/skills/uv-workflow/: SKILL.md  UV_REFERENCE.md
.devcontainer/: devcontainer.json  post-create.sh
app/: __init__.py  cli.py  core.py  learning.py  models.py  wikidata.py
app/api/: __init__.py  app.py  deps.py  explorer.py  game.py
app/db/: __init__.py  characters.py  conn.py  games.py  likelihoods.py  questions.py
app/game/: __init__.py  engine.py  questions.py
public/static/: data.js  ui.css  ui.js
public/templates/: data.html  ui.html
tests/: test_core.py  test_engine.py  test_wikidata.py
