[project]
name = "akinator"
version = "0.1.0"
description = "Local Akinator-style famous-person guessing game"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Giovanni Giacometti", email = "giovanni.giacometti5@gmail.com" } ]
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.0",
    "psycopg[binary]>=3.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "rapidfuzz>=3.0",
    "requests>=2.32",
    "rich>=13.0",
    "scipy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-mock>=3.14",
    "ruff>=0.9.5",
    "types-requests>=2.33.0.20260408",
]
